--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -78,6 +78,10 @@
                                     </div>
                                 </div>
                             </form>
+                            <hr/>
+                            <a href="http://localhost:3000/auth/google">
+                                <button class="btn" >Google</button>
+                            </a>
                         </div>
                     </div>
                 </div>
