--- a/views/waypoint/index.hbs
+++ b/views/waypoint/index.hbs
@@ -12,6 +12,7 @@
                         <h2>waypoint naam: {{this._id}}</h2>
                     </div>
                 {{/each}}
+                <button onclick="location.href=window.location.href.split('?')[0]+'/create'" type="button">Waypoint toevoegen</button>
             </div>
         </div>
     </section>
