--- a/views/waypoint/create.hbs
+++ b/views/waypoint/create.hbs
@@ -11,9 +11,9 @@
                     <div class="form-group">
                         <label>adress: </label>
                         <input type="text" name="adress" required autofocus>
-                        <label>adress: </label>
+                        <label>Meters: </label>
                         <input type="text" name="meters" required autofocus>
-                        <button onclick="getbars(this)" action="/races/location">Zoek bars</button>
+                        <input type="button" onclick="getbars(this)" action="/races/location" value="Zoek bars"></input>
                         <label>bars(u moet hiervoor eerst zoeken): </label>
                         <select multiple name="bars" required>
                         </select>
