--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -47,25 +47,23 @@
     <main class="py-4">
         <div class="container">
             <div class="row justify-content-center">
-
                 <div class="col-md-8">
                     {{#if message}}
                     <div  class="alert alert-primary" role="alert">
                     {{message}}
                     </div>
                     {{/if}}
-                
                     <div class="card">
-                        <div class="card-header">Login</div>
-                            
+                        <div class="card-header">Registreer</div>
+
                         <div class="card-body">
-                            <form method="POST" action="/login" >
+                            <form method="POST" action="/signup" >
 
                                 <div class="form-group row">
                                     <label for="email" class="col-sm-4 col-form-label text-md-right">E-Mail</label>
 
                                     <div class="col-md-6">
-                                        <input id="email" type="text" class="form-control" name="email" value="" required autofocus>
+                                        <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
                                     </div>
                                 </div>
 
@@ -80,18 +78,11 @@
                                 <div class="form-group row mb-0">
                                     <div class="col-md-8 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
-                                            Login
+                                            Registreer
                                         </button>
                                     </div>
                                 </div>
                             </form>
-                            <hr/>
-                            <a href="/signup">
-                                <button class="btn" >Registreer local</button>
-                            </a>
-                            <a href="http://localhost:3000/auth/google">
-                                <button class="btn" >Login google</button>
-                            </a>
                         </div>
                     </div>
                 </div>
