--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -76,7 +76,7 @@
                                 <div class="card">
                                     <h3 class="card-header"><span class="fa fa-user"></span>Google</h3>
 
-                                     {{#if data.user.google.email}}
+                                     {{#if data.user.google.token}}
                                         <p class="card-body">
                                             <strong>Name</strong>: {{data.user.google.name}}<br>
                                             <strong>email</strong>: {{data.user.google.email}}<br>
