--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -92,6 +92,9 @@
                             <a href="http://localhost:3000/auth/google">
                                 <button class="btn" >Login google</button>
                             </a>
+                            <a href="http://localhost:3000/auth/facebook">
+                                <button class="btn" >Login facebook</button>
+                            </a>
                         </div>
                     </div>
                 </div>
