--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -107,7 +107,7 @@
                             </div>
                         </div>    
                         </div>
-                                  
+                          <a href="/logout" class="btn btn-default">Uitloggen</a>         
                     </div>
                 </div>
             </div>
