--- a/views/user/localconnect.hbs
+++ b/views/user/localconnect.hbs
@@ -63,7 +63,7 @@
                                     <label for="email" class="col-sm-4 col-form-label text-md-right">E-Mail</label>
 
                                     <div class="col-md-6">
-                                        <input id="email" type="text" class="form-control" name="email" value="" required autofocus>
+                                        <input id="email" type="text" class="form-control"  maxlength="255" name="email" value="" required autofocus>
                                     </div>
                                 </div>
 
@@ -71,7 +71,7 @@
                                     <label for="password" class="col-md-4 col-form-label text-md-right">Wachtwoord</label>
 
                                     <div class="col-md-6">
-                                        <input id="password" type="password" class="form-control" name="password" required>
+                                        <input id="password" type="password" minlength="8" maxlength="255" class="form-control" name="password" required>
                                     </div>
                                 </div>
 
