map toegevoegd andere functies

--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -23,6 +23,9 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 }
+.changemap{
+  margin-left:20px;
+}
 /* Layout */
 .wrapper {
   height: 100%;
