--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,7 +53,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-footer">
-                                <a href="" class="btn btn-default btn-flat">Uitloggen</a>
+                                <a href="/logout" class="btn btn-default btn-flat">Uitloggen</a>
                             </li>
                         </ul>
                     </li>
