--- a/views/race/create.hbs
+++ b/views/race/create.hbs
@@ -7,7 +7,7 @@
     <section class="content">
         <div class="row">
             <div class="box box-body">
-                <form id="formpage" class="sendtoserver" action="/races" method="POST">
+                <form id="formpage" class="createrace" action="/races" method="POST">
                     <div class="form-group">
                         <label>Naam: </label>
                         <input type="text" name="_id" required autofocus>
