--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -9,7 +9,7 @@
     <title>Beer game</title>
 
     <!-- Scripts -->
-    <script src="/js/app.js/" defer></script>
+    <script src="/js/app.js" defer></script>
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
