--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -73,7 +73,7 @@
                                     <label for="password" class="col-md-4 col-form-label text-md-right">Wachtwoord</label>
 
                                     <div class="col-md-6">
-                                        <input id="password" minlength="5" maxlength="255" type="password" class="form-control" name="password" required>
+                                        <input id="password" maxlength="255" type="password" class="form-control" name="password" required>
                                     </div>
                                 </div>
 
