push(zit nog fouten in()

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,6 +53,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-footer">
+                                <a href="/profile" class="btn btn-default btn-flat">Profiel</a>
                                 <a href="/logout" class="btn btn-default btn-flat">Uitloggen</a>
                             </li>
                         </ul>
