--- a/views/race/index.hbs
+++ b/views/race/index.hbs
@@ -20,7 +20,7 @@
                         {{#if this.isStarted}}
                         <tr>
                             <td>{{this._id}}</td>
-                        {{#if isAdmin}}<td>
+                        {{#if ../isAdmin}}<td>
                                 {{#if this.isStarted}}
                                         ja
                                 {{else}}
