--- a/views/race/show.hbs
+++ b/views/race/show.hbs
@@ -1,3 +1,5 @@
+<script src="/js/socket.io.js" defer></script>
+<script src="/js/socketfunctions.js" defer></script>
 <div class="container">
     <section class="content-header">
         <h1>
