--- a/views/race/show.hbs
+++ b/views/race/show.hbs
@@ -42,10 +42,19 @@
                         {{/each}}
                         </tbody>
                     </table>
-                    <div>
-                        <iframe id="map" width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?" style="border: 1px solid black"></iframe>
-                    </div>
+                    <div class="container nexttoeachoter">
+                        <div class="row">
+                            <div class="col">
+                                <iframe id="map" width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?" style="border: 1px solid black"></iframe>
+                            </div>
+                            <div class="col">
+                                <button onclick="socketaskuseramount()" >Check aantal gebruikers</button>
+                                <div id="chat">
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
