--- a/views/waypoint/create.hbs
+++ b/views/waypoint/create.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <section class="content-header">
         <h1>
-            Races Aanmaken
+            Waypoint Aanmaken
         </h1>
     </section>
     <section class="content">
