--- a/views/user/localconnect.hbs
+++ b/views/user/localconnect.hbs
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
 
     <!-- Styles -->
-    <link href="css/app.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
                                     <label for="password" class="col-md-4 col-form-label text-md-right">Wachtwoord</label>
 
                                     <div class="col-md-6">
-                                        <input id="password" type="password" minlength="8" maxlength="255" class="form-control" name="password" required>
+                                        <input id="password" type="password" maxlength="255" class="form-control" name="password" required>
                                     </div>
                                 </div>
 
