verwijder functie toegevoegd waypoints

--- a/views/waypoint/create.hbs
+++ b/views/waypoint/create.hbs
@@ -7,7 +7,7 @@
     <section class="content">
         <div class="row">
             <div class="box box-body">
-                <form id="formpage" class="sendtoserver" action="/races/{{race_id}}/waypoints/create" method="POST">
+                <form id="formpage" class="createrace" action="/races/{{race_id}}/waypoints/create" method="POST">
                     <div class="form-group">
                         <label>adress: </label>
                         <input type="text" name="adress" required autofocus>
