login test werkt. paar tests gemaakt(package json moet nog worden veranderd)

--- a/views/race/show.hbs
+++ b/views/race/show.hbs
@@ -2,9 +2,7 @@
 <script src="/js/socketfunctions.js" defer></script>
 <div class="container">
     <section class="content-header">
-        <h1>
-            Races
-        </h1>
+        <h1>Races</h1>
     </section>
     <section class="content">
         <div class="row">
