--- a/views/waypoint/edit.hbs
+++ b/views/waypoint/edit.hbs
@@ -1,8 +1,6 @@
 <div class="container">
     <section class="content-header">
-        <h1>
-            Waypoint Bewerken
-        </h1>
+        <h1>Waypoint Bewerken</h1>
     </section>
     <section class="content">
         <div class="row">
