--- a/views/waypoint/index.hbs
+++ b/views/waypoint/index.hbs
@@ -1,8 +1,6 @@
 <div class="container">
     <section class="content-header">
-        <h1>
-            Waypoints van race: {{this._oldid}}
-        </h1>
+        <h1>Waypoints van race: {{this._oldid}}</h1>
     </section>
     <section class="content">
         <div class="row"><div class="header">
