--- a/views/race/index.hbs
+++ b/views/race/index.hbs
@@ -1,8 +1,6 @@
 <div class="container">
     <section class="content-header">
-        <h1>
-            Races
-        </h1>
+        <h1>Races</h1>
     </section>
     <section class="content">
         <div class="row">
