--- a/views/race/edit.hbs
+++ b/views/race/edit.hbs
@@ -5,7 +5,7 @@
     <section class="content">
         <div class="row">
             <div class="box box-body">
-                <form id="formpage" class="createrace" action="/races/{{data}}" method="PUT">
+                <form id="formpage" class="editrace" action="/races/{{data}}" method="PUT">
                     <div class="form-group">
                         <label>Oude naam: </label>
                         <input type="text" name="old" value="{{data}}"  disabled="disabled">
