--- a/views/race/edit.hbs
+++ b/views/race/edit.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <section class="content-header">
-        <h1>Races Aanmaken</h1>
+        <h1>Races Bewerken</h1>
     </section>
     <section class="content">
         <div class="row">
